--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  graphql: 5.1.1
   graphql_flutter: ^5.1.0
   graphql_codegen: ^0.9.0
   build_runner: ^2.1.11
