--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   graphql: 5.1.1
   graphql_flutter: ^5.1.0
-  graphql_codegen: ^0.9.0
-  build_runner: ^2.1.11
+  json_serializable: ^6.2.0
 
 dev_dependencies:
   flutter_test:
@@ -49,7 +48,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+  graphql_codegen: ^0.9.0
+  build_runner: ^2.1.11
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
