--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   graphql: 5.1.1
   graphql_flutter: ^5.1.0
   json_serializable: ^6.2.0
+  flutter_hooks: ^0.18.5+1
 
 dev_dependencies:
   flutter_test:
