--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   graphql_flutter: ^5.1.0
   json_serializable: ^6.2.0
   flutter_hooks: ^0.18.5+1
+  flutter_riverpod: ^1.0.4
+  hooks_riverpod: ^1.0.4
 
 dev_dependencies:
   flutter_test:
